Corrects the alignment of the tweets title

--- a/_harp/css/_components.tweets.scss
+++ b/_harp/css/_components.tweets.scss
@@ -1,7 +1,3 @@
-.tweets-title {
-  text-align: center;
-}
-
 .tweets-tweet {
   display:block;
   background: #fff;
